testdata/cot/invalid/syntax_errors/unexpected_token.cot
// Unexpected token - should fail to parse

fn main() {
    var x = @@@
}
